deployment/recipe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-service
spec:
  selector:
    app: recipe
  ports:
  - port: 80
    targetPort: 8080
