deployment/recipe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
spec:
  rules:
  - host: recipe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipe-service
            port:
              number: 80
